# Cognito

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_auth.py
alembic/: env.py
alembic/versions/: 001_initial_migration_user_and_role.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: admin.py  auth.py  chat.py  pages.py
app/security/: auth.py  dependencies.py
app/services/: agno_service.py  cognee_service.py  knowledge_service.py
app/static/css/: custom.css
app/static/js/: chat.js  dashboard.js
app/templates/: base.html  dashboard.html  home.html  landing.html  login.html  register.html
app/utils/: db_utils.py  file_handler.py  recreate_admin.py  seed.py
